# Dynamic-Attacks-for-Federated-Learning

./: .gitignore  CLAUDE.md  README.md  final_model.pt  pyproject.toml  run.sh  run_thesis_sweep.sh
dashboard/: __init__.py  app.py
dashboard/static/: app.css  app.js  index.html
db/: create_db.py  dynamic_fl.sqlite  queries.py  schema.sql  validate.py
docs/: DATABASE_WORKFLOW.md  FEMNIST_VULNERABILITY_UPDATE.md  datasets_catalog.md  how_to_run_llm_sweep_analysis.md  thesis_sweeps2.conf  vulnerability_pilot_once.conf
docs/updates/: 2026-06-25.md
pytorchexample/: client_app.py  server_app.py  task.py
scripts/: __init__.py  adaptive_takeover_summary.py  generate_sweep_summary.py  llm_sweep_analysis.py  measure_srv_norm.py  prefetch_datasets.py  primitive_attack_rank.py  run_simulation_and_log.py  vulnerability_analysis.py
tests/: test_smoke.py  test_trust_strategies.py
